Fixed some bugs

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-<p>git tutorial for beginners</p>    
+<p>git tutorial for beginners for free</p>    
 </body>
 </html>
